Fix up alignemnt of dropdown menu button

--- a/app/stylesheets/shell-window/toolbar-dropdown.less
+++ b/app/stylesheets/shell-window/toolbar-dropdown.less
@@ -7,6 +7,12 @@
 .toolbar-dropdown-menu-btn {
   position: relative;
 
+  .fa-bars {
+    display: block;
+    vertical-align: middle;
+    margin-top: -2px;
+  }
+
   progress {
     position: absolute;
     // TODO: This is jank. Instead of automatically opening the menu and showing this progress
